--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -58,6 +58,7 @@
     "sonner": "^2.0.7",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
+    "tech-stack-icons": "^3.3.2",
     "vaul": "^1.1.2",
     "zod": "^4.1.12"
   },
