--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -48,6 +48,7 @@
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "input-otp": "^1.4.2",
+    "jose": "^6.1.0",
     "lucide-react": "^0.548.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
