feat: Enhance API with session management, JWT handling, and improved comment and post functionalities; add rate limiting and security measures

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,7 +2,26 @@
 # Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
 # to load environment variables from .env files: https://pris.ly/prisma-config-env-vars.
 
+# Database
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+DATABASE_URL="postgresql://user:password@localhost:5432/blog_db?schema=public"
 
-DATABASE_URL=
+# Application
+# Port for the NestJS application to run on
+PORT=3001
+
+# Environment mode (development, production, test)
+NODE_ENV=development
+
+# JWT Configuration
+# Secret key for signing JWT tokens (use a strong, random string in production)
+# Generate one with: openssl rand -base64 32
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+
+# JWT token expiration time (e.g., 1h, 7d, 30d)
+JWT_EXPIRES_IN=7d
+
+# Frontend Configuration
+# URL of the frontend application for CORS configuration
+FRONTEND_URL=http://localhost:3000
